open api historyí nem megy
