# src/main/openapi/catalog-service-openapi.yml
@@ -289,6 +289,40 @@ paths:
             application/json:
               schema:
                 type: string
+  /api/products/search:
+    get:
+      tags:
+        - productController
+      operationId: search
+      parameters:
+        - name: full
+          in: query
+          required: false
+          schema:
+            type: boolean
+        - schema:
+            type: integer
+          in: query
+          name: page
+        - schema:
+            type: integer
+          in: query
+          name: size
+        - schema:
+            type: array
+            items:
+              type: string
+          in: query
+          name: sort
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProductDto'
 
 
 components:
